--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC6XJ81bkDrCpXPyW59DKgxqCG5NGPxbEc" />
+            android:value="" /> //API here
     </application>
 
 </manifest>
